<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_result"
    tools:context=".Result">




            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/heyCongratulations"
                android:textColor="#03913E"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

    <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="157dp"
                app:srcCompat="@drawable/cup" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/yourScoreis"
                android:textColor="#03913E"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/finish"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="20dp"
                   android:text="@string/Finish"
                   android:textAllCaps="true"
                   android:textColor="#ECEBEB"
                   android:textStyle="italic|bold"
                   android:background="#077E38"
                   android:textSize="20sp"/>

</LinearLayout>