<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="#363A43"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressbar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="10dp"
                android:indeterminate="false"
                android:indeterminateBehavior="repeat"
                android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
                android:max="10"
                android:minHeight="5dp"
                android:progress="0"
                android:progressTint="#64DD17" />

            <TextView
                android:id="@+id/progress_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/progressbar"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/optionboxshape"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/option1"
            android:textColor="#363A43"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/optionboxshape"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/option1"
            android:textColor="#363A43"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/optionboxshape"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/option1"
            android:textColor="#363A43"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/optionboxshape"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/option1"
            android:textColor="#363A43"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#8C43F1"
            android:text="@string/Submit"
            android:textColorLink="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>

        











    

